# csv2parquet

./: Cargo.toml  README.md  test.py
examples/: simple_write.rs
src/: buffered_column_writer.rs  column_writer.rs  lib.rs  main.rs  memory.rs  row_group.rs  writer.rs  wrong_column_writer.rs
tests/: write.rs
